# spass-to-csv

./: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: build.yml  pages.yml
docs/: index.html
scripts/: build_macos.sh  build_windows.ps1  pyinstaller_entry.py
src/spass_csv_converter/: __init__.py  __main__.py  converter.py  crypto.py  errors.py  exporters.py  gui.py  models.py  spass_parser.py
tests/: test_converter.py
