[project]
name = "spass-csv-converter"
version = "0.1.0"
description = "Convert readable Samsung Pass .spass export files to CSV."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
spass-csv-converter = "spass_csv_converter.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
